<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_vehicle">

    <fragment
        android:id="@+id/nav_vehicle"
        android:name="com.example.autos.ui.home.HomeFragment"
        android:label="@string/vehicle"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_vehicle_to_nav_refueling"
            app:destination="@id/nav_refueling" />
        <action
            android:id="@+id/action_nav_vehicle_to_nav_newCar"
            app:destination="@id/nav_newCar" />
        <action
            android:id="@+id/action_nav_vehicle_to_nav_statistics"
            app:destination="@id/nav_statistics" />
    </fragment>

    <fragment
        android:id="@+id/nav_vehicles"
        android:name="com.example.autos.ui.vehiculos.VehiculosFragment"
        android:label="@string/vehicles"
        tools:layout="@layout/fragment_vehicles" >
        <action
            android:id="@+id/action_nav_vehicles_to_nav_newCar"
            app:destination="@id/nav_newCar" />
        <action
            android:id="@+id/action_nav_vehicles_to_nav_vehicle"
            app:destination="@id/nav_vehicle"
            app:popUpTo="@id/nav_vehicles"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_refueling"
        android:name="com.example.autos.ui.refueling.RefuelingFragment"
        android:label="@string/repostaje"
        tools:layout="@layout/fragment_refueling" >
        <action
            android:id="@+id/action_nav_refueling_to_nav_repostajes"
            app:destination="@id/nav_repostajes"
            app:popUpTo="@id/nav_vehicle" />
    </fragment>
    <fragment
        android:id="@+id/nav_newCar"
        android:name="com.example.autos.ui.newcar.NewCarFragment"
        android:label="@string/add_vehicle"
        tools:layout="@layout/fragment_new_car">
        <action
            android:id="@+id/action_nav_newCar_to_nav_vehicle"
            app:destination="@id/nav_vehicle">
            <argument
                android:name="reloading"
                android:defaultValue="false" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/nav_repostajes"
        android:name="com.example.autos.ui.refueling.RepostajesFragment"
        android:label="@string/historico"
        tools:layout="@layout/fragment_repostajes">
        <action
            android:id="@+id/action_nav_repostajes_to_nav_vehicle"
            app:destination="@id/nav_vehicle" />
    </fragment>

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.example.autos.ui.estadisticas.StadisticsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_statistics"/>
</navigation>